# foo

./: LPRnetv5.1.6_mulfold_epoch400_loss_0.038.pth  LPRnetv5.1.6_mulfold_fintuned26_epoch100_loss_0.307.pth  README.md  lprnetv5.1.2_24x188-sim.onnx  plot_group_imgs.py
lprnet_validation/: error_analysis.py  lpr_onnx_infer.py  metric.py  requirements.txt
misc/: CMakeList3.txt  CMakeLists.txt  CMakeLists2.txt
note/: 5.1.2_gen_w_aug.txt  5.1.2_gen_wo_aug.txt  5.1.2_mulfold_val15_oldsynth_wo_aug.txt  5.1.2_mulfold_val15_w_aug.txt  5.1.2_mulfold_val15_wo_aug.txt  5.1.2_mulfold_val17_w_aug.txt  5.1.2_mulfold_val17_wo_aug.txt  5.1.2_oldsynth_wo_aug.txt  download_data.txt  install_docker.txt  test_wandb.py
output/: LPRnet_epoch300_loss_0.552.pth  paddle_lprnet_sim.onnx  pp_vn_real_1row_lp_total.txt  svtr_finetune_testv1.txt
svtr/: output.txt
